[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "peek-plugin-diagram"
version = "0.0.0"
authors = [{name = "Synerty", email = "contact@synerty.com"}]
description = "Peek Plugin Diagram - My first enhancement."
keywords = ["Peek", "Python", "Platform", "synerty"]
classifiers = []
dependencies = [
    "peek-plugin-base==0.0.*,>=0.0.0",
    "Numpy",
    "tinycss2>=1.2.1",
    "colormath>=3.0.0",
]

[project.urls]
Homepage = "https://bitbucket.org/synerty/peek-plugin-diagram"
Download = "https://bitbucket.org/synerty/peek-plugin-diagram/get/0.0.0.zip"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*.tests"] # *.tests.*; tests.*; tests
namespaces = false
